# Chat-Webapp-with-Rust-backend-ReactTS-frontend

./: .gitignore  package.json
backend/: .env  Cargo.toml
backend/migrations/: script.sql
backend/src/: lib.rs  main.rs  telemetry.rs
backend/src/db/: error.rs  message.rs  mod.rs  user.rs
backend/src/models/: credentials.rs  message.rs  mod.rs  user.rs
backend/src/models/dto/: mod.rs
backend/src/models/dto/indto/: message.rs  mod.rs  user.rs
backend/src/models/parts/: displayname.rs  mod.rs  text.rs  title.rs  uri.rs  username.rs
backend/src/routes/: auth.rs  messages.rs  mod.rs
backend/src/routes/admin/: mod.rs  users.rs
backend/src/routes/errors/: admin.rs  auth.rs  mod.rs  notfound.rs
backend/src/traits/: mod.rs  to_sql_param.rs
frontend/: config-overrides.js  package-lock.json  package.json
frontend/src/: App.tsx  reportWebVitals.ts  style.css
frontend/src/config/: backendConfig.tsx
frontend/src/models/: Message.ts
frontend/src/routes/: AllChat.tsx  Conversation.tsx  HomePage.tsx  Lobby.css  Lobby.tsx  LoginPage.tsx  MyChats.tsx  Navibar.css  Navibar.tsx  RegisterPage.tsx
frontend/src/services/: AuthService.ts  MessageService.ts  UserService.ts
websocketserver/: package-lock.json  package.json  websocketserver.js
