[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dev-dependencies]
reqwest = { version = "0.11.27", features = ["json"]}
claims = "0.7.1"

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-cors = "0.6.4"
argon2 = { version = "0.5.3", features = ["std"]}
jsonwebtoken = "8.3.0"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.4"
tracing-actix-web = "0.7.11"
uuid = { version = "1.4.1", features = ["serde", "v4"]}
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-async-std-native-tls", "mysql", "uuid", "chrono", "migrate"] }
secrecy = { version = "0.8", features = ["serde"] }
rand = "0.8.5"
chrono = "0.4.38"
tokio = {version = "1.31.0", features = ["macros", "rt-multi-thread"]}
validator = { version = "0.16.1", features = ["derive"]}
nutype = { version = "0.3.1", features = ["regex", "serde"]}
